@@ -122,6 +122,7 @@ Cacti CHANGELOG
 -feature#5908: Add Searching of Notes and External ID when Searching for a Device
 -feature#5920: Remove the use of tables for alignment on graphs page and move to flex alignment
 -feature#5922: Add HPE Nimble/Alletra template
+-feature#5923: If RRDtool crashes due to a segmentation fault, report that and retry a few times 
 -feature: Allow messages to be popup notifications
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
